--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
+    "emotion-theming": "^10.0.27",
     "express": "^4.16.3",
     "express-graphql": "~0.8.0",
     "express-jwt": "^5.3.1",
