--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "@babel/plugin-transform-react-inline-elements": "^7.0.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-react": "^7.14.5",
+    "@mdx-js/loader": "^1.6.22",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "babel-loader": "^8.0.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.18",
     "browser-sync": "^2.24.7",
     "chokidar": "^3.3.0",
