--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@loadable/component": "^5.15.0",
+    "@mdx-js/react": "^1.6.22",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
@@ -38,6 +39,7 @@
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-error-boundary": "^3.1.3",
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.1",
     "source-map-support": "^0.5.9",
