--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^10.0.0",
     "emotion-theming": "^10.0.27",
     "express": "^4.16.3",
     "express-graphql": "~0.8.0",
