fixed mdxFileHelper to get filenames by parsing the webpack generated manifest.
Moved some static content to be in the folders with the files that use them.

Added an index.js to content module. This lets the MDX files to get named chunks when using webpack (cleaner and helps with dynamic loading by name).

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "0.0.0",
+  "name": "flip-the-table",
+  "version": "1.0.0",
   "private": true,
   "engines": {
     "node": ">=8.16.2",
