--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^10.0.27",
     "@loadable/component": "^5.15.0",
     "@mdx-js/react": "^1.6.22",
+    "babel-plugin-import-glob": "^2.0.0",
     "body-parser": "^1.19.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
@@ -44,7 +45,7 @@
     "sequelize": "^5.21.2",
     "serialize-javascript": "^2.1.1",
     "source-map-support": "^0.5.9",
-    "sqlite3": "^4.0.8",
+    "sqlite3": "5",
     "universal-router": "^8.3.0",
     "whatwg-fetch": "^3.0.0"
   },
@@ -58,6 +59,7 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.14.5",
+    "babel-plugin-import-glob": "^2.0.0",
     "@mdx-js/loader": "^1.6.22",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
